--- a/README
+++ b/README
@@ -3,10 +3,17 @@ ECD_Server
 
 ECD后台服务端，从豆瓣获取数据
 
+豆瓣api地址：
 
-数据库结构：
+	/** 根据影片名称查询地址 */
+	public static final String SEAECH_NAME_URL = "http://api.douban.com/v2/movie/search?q=";
 
-  			
+	/** 根据id查看影片详细信息地址 */
+	public static final String SEARCH_ID_URL = "http://api.douban.com/v2/movie/subject/";
+
+
+
+数据库结构：  			
 				
 Directors(导演信息表)		 		
 名称	      类型	          约束条件	      说明	
